Re-brand and centralise documentation (#24)
Re-brand and centralise documentation

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-slate
-title: Mozilla WebThings Documentation
-description: A guide to using the WebThings Gateway and WebThings Framework
+title: WebThings Documentation
+description: A guide to using and developing for the WebThings IoT Platform
 baseurl: /docs
 show_downloads: false
 encoding: UTF-8
